# wpforge-pro

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  DEVELOPMENT_PROMPT.md  Dockerfile  FAQ.md  LICENSE  PROGRESS.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  docker-compose.yml
backend/: .coveragerc  pytest.ini  requirements.txt  setup.cfg
backend/app/: celery.py  cli.py  main.py
backend/app/api/: __init__.py  ai.py  price.py  scraping.py  seo.py  translation.py  wordpress.py
backend/app/api/v1/: __init__.py  ai.py  auth.py  funnel.py  monitoring.py  price.py  products.py  proxy.py  scraping.py  seo.py  sites.py  tasks.py  translation.py  (+1 more)
backend/app/core/: __init__.py  config.py  database.py  hooks.py  logging.py  security.py
backend/app/demo/: __init__.py  demo_data.py
backend/app/middleware/: __init__.py  csrf.py  error_handler.py  rate_limiting.py  request_logging.py  security_headers.py
backend/app/models/: __init__.py  base.py  plugin.py  product.py  seo.py  site.py  task.py  translation.py  user.py
backend/app/plugins/: __init__.py  security_scanner.py  seo_enhancer.py
backend/app/schemas/: __init__.py
backend/app/services/: ai_clone_service.py  ai_orchestrator.py  ai_scraper_service.py  ai_seo_service.py  ai_service.py  monitoring_service.py  plugin_system.py  price_service.py  proxy_service.py  scraper_service.py  search_console_service.py  seo_enhanced.py  seo_service.py  stealth_service.py  theme_config_generator.py  translation_service.py  woocommerce_automation.py  wordpress_service.py
backend/app/tasks/: __init__.py  cloning_tasks.py  import_tasks.py  pricing_tasks.py  scraping_tasks.py  seo_tasks.py  translation_tasks.py
backend/app/utils/: __init__.py  date_utils.py  file_utils.py  string_utils.py  validators.py
backend/tests/: conftest.py
backend/tests/unit/: test_ai_clone_service.py  test_ai_service.py  test_api.py  test_auth_api.py  test_bricks_converter.py  test_captcha.py  test_celery_tasks.py  test_config.py  test_database.py  test_demo_data.py  test_fingerprint.py  test_monitoring_service.py  test_page_builder.py  test_performance.py  test_plugin_system.py  test_price_service.py  test_pricing_tasks.py  test_proxy_network.py  test_scraper_advanced.py  test_scraper_service.py  test_search_console_service.py  test_security.py  test_seo_service.py  test_sites_api.py  test_stealth.py  test_string_utils.py  test_theme_config_generator.py  test_translation_service.py  test_utils.py  test_utils_extra.py  test_woocommerce_automation.py  test_wordpress_service.py
(+222 files in other folders)
