[metadata]
name = wpforge
version = 1.0.0
description = WPForge - AI-Driven WordPress Cross-Border E-commerce Website Building System
long_description = file: README.md
long_description_content_type = text/markdown
author = WPForge Team
author_email = team@wpforge.io
url = https://github.com/wpforge/wpforge
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP :: Site Management
    Topic :: Software Development :: Code Generators

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi>=0.104.0
    uvicorn>=0.24.0
    sqlalchemy>=2.0.0
    alembic>=1.12.0
    psycopg2-binary>=2.9.0
    redis>=5.0.0
    celery>=5.3.0
    playwright>=1.40.0
    httpx>=0.25.0
    pydantic>=2.5.0
    pydantic-settings>=2.1.0
    python-jose[cryptography]>=3.3.0
    passlib[bcrypt]>=1.7.0
    python-multipart>=0.0.6
    aiofiles>=23.2.0
    beautifulsoup4>=4.12.0
    lxml>=4.9.0
    pillow>=10.1.0
    jinja2>=3.1.0
    python-dotenv>=1.0.0
    loguru>=0.7.0

[options.packages.find]
where = .
include = app*

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    venv,
    env,
    build,
    dist,
    *.egg-info,
    migrations,
    tests,
    docs

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
disallow_untyped_defs = False
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = True
no_implicit_optional = True
strict_optional = False

[mypy-app.*]
ignore_errors = False

[mypy-tests.*]
ignore_errors = True

[isort]
profile = black
line_length = 120
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[bandit]
exclude_dirs =
    /tests,
    /migrations,
    /venv

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --strict-markers --tb=short
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests
    e2e: marks tests as end-to-end tests
